@@ -2024,12 +2024,6 @@ MagickExport MagickRealType GetPixelIntensity(const Image *image,
     }
     case Rec709LumaPixelIntensityMethod:
     {
-      if (image->colorspace == sRGBColorspace)
-        {
-          red=DecodePixelGamma(red);
-          green=DecodePixelGamma(green);
-          blue=DecodePixelGamma(blue);
-        }
       intensity=0.21260f*red+0.71520f*green+0.07220f*blue;
       break;
     }
