@@ -1,5 +1,7 @@
 2013-03-26  6.8.4-1 Cristy  <quetzlzacatenango@image...>
   * Sync 'intensity' option with current image.
+  * Sharpen kernel was not properly normalized leading to slightly darker
+    results than expected.
 
 2013-03-26  6.8.4-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.4-0, SVN revision 11531.
